syntax = "proto3";

package main;

option go_package = "./proto";

message Empty {}

message User {
    string email = 1;
    string password = 2;
    }

message TokenMessage {
    string token = 1;
}

message AddProductsCardsReq {
    string token                       = 1;
    repeated ProductCard productsCards = 2;
}

message ProductCard {
    uint64 id   = 1;
    string name = 2;
}