syntax = "proto3";

package main;

option go_package = "./proto";

import "message.proto";



service AuthService {
    rpc Register(AuthRequest) returns (TokenResponse);
    rpc Login(AuthRequest) returns (TokenResponse);
}

service ProductCardService {
    rpc AddProductsCards(AddProductsCardsReq) returns (Empty);
}


service StockService {
    rpc GetFromTo(GetFromToReq) returns (GetFromToResp);
}